# cplusplus

./: .gitignore
Concurrency/: CMakeLists.txt
Concurrency/src/: SharedMemory.cpp  Threadsafe_queue.cpp  barrier.cpp  chronoExmaple.cpp
QT/: README.md
cmakeExample/: CMakeLists.txt  main.cpp
compile/curl-7.85.0/: Makefile  libcurl.pc  libtool
compile/curl-7.85.0/lib/: libcurl_la-base64.lo  libcurl_la-conncache.lo  libcurl_la-connect.lo  libcurl_la-curl_addrinfo.lo  libcurl_la-curl_memrchr.lo  libcurl_la-curl_range.lo  libcurl_la-easyoptions.lo  libcurl_la-fopen.lo  libcurl_la-ftp.lo  libcurl_la-ftplistparser.lo  libcurl_la-h2h3.lo  libcurl_la-hostasyn.lo  libcurl_la-hostip.lo  libcurl_la-hostsyn.lo  libcurl_la-http2.lo  libcurl_la-http_negotiate.lo  libcurl_la-http_ntlm.lo  libcurl_la-inet_ntop.lo  libcurl_la-llist.lo  libcurl_la-mqtt.lo  libcurl_la-openldap.lo  libcurl_la-parsedate.lo  libcurl_la-pingpong.lo  libcurl_la-select.lo  libcurl_la-sendf.lo  libcurl_la-smtp.lo  libcurl_la-socks_gssapi.lo  libcurl_la-timeval.lo  libcurl_la-transfer.lo  libcurl_la-version_win32.lo
compile/curl-7.85.0/tests/: Makefile
compile/openssl-1.1.1q/: configdata.pm  libcrypto.pc  openssl.pc
compile/openssl-1.1.1q/fuzz/: cms-test
compile/openssl-1.1.1q/test/: asynciotest  asynctest  (+50 more)
compile/zlib-1.3/: Makefile
cplusplus/: README.md
cplusplus/Concurrency/: CMakeLists.txt  README.md  thread01.cpp  thread03.cpp
cplusplus/cplusplus/: README.md
cplusplus/cplusplus/Concurrency/: CMakeLists.txt
cplusplus/cplusplus/Concurrency/src/: messageQueue.cpp  packaged_task.cpp
(+325 files in other folders)
